# WMan

./: .gitignore  README.md  pyproject.toml  requirements.txt  sheetutils.py
WMan/: CustomerManager.py  OrderManager.py  ProductManager.py  __main__.py  database.py  main.py  utils.py
WMan/CLI/: availability.py  customer.py  order.py  product.py
WMan/sheetutils/: reader.py  writer.py
sheetutils/: reader.py  writer.py
test/: __init__.py  test_productmanager.py  test_reader.py
test/assets/: reader_cars.xlsx
tests/: ProductManager_test.py
tests/sheetutils/: reader_test.py
